[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/YellowMarker.gd" type="Script" id=1]
[ext_resource path="res://assets/FlowerTest.tscn" type="PackedScene" id=2]
[ext_resource path="res://sounds/Real Draft 1/harmonica-yellow.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/InteractText.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/Yellow Sounds/A.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/Yellow Sounds/B-.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/Yellow Sounds/D.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/Yellow Sounds/B.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/Yellow Sounds/A-.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/Yellow Sounds/E.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/Yellow Sounds/E-.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/Yellow Sounds/G-.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/Yellow Sounds/D-.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/Yellow Sounds/G.wav" type="AudioStream" id=14]

[sub_resource type="SphereShape" id=1]
radius = 2.06421

[sub_resource type="SpatialMaterial" id=2]
params_blend_mode = 1
albedo_color = Color( 1, 0.992157, 0.388235, 1 )

[sub_resource type="CapsuleMesh" id=3]
material = SubResource( 2 )
radius = 0.115
mid_height = 7.195

[node name="YellowMarker" type="Area"]
script = ExtResource( 1 )

[node name="FlowerTest" parent="." instance=ExtResource( 2 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.50998, 0 )
light_color = Color( 1, 0.960784, 0, 1 )
light_energy = 3.74
shadow_enabled = true

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 3.682, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="Jingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="InteractText" parent="." instance=ExtResource( 4 )]

[node name="A" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = 4.0
bus = "Music"

[node name="A-" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
unit_db = 8.0
bus = "Music"

[node name="B" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 8 )
unit_db = 4.0
bus = "Music"

[node name="B-" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_db = 8.0
bus = "Music"

[node name="D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )
unit_db = 4.0
bus = "Music"

[node name="D-" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 13 )
unit_db = 8.0
bus = "Music"

[node name="E" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 10 )
unit_db = 4.0
bus = "Music"

[node name="E-" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 11 )
unit_db = 8.0
bus = "Music"

[node name="G" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 14 )
unit_db = 4.0
bus = "Music"

[node name="G-" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 12 )
unit_db = 8.0
bus = "Music"
[connection signal="body_entered" from="." to="." method="_on_YellowMarker_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_YellowMarker_body_exited"]
